--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,14 @@
-<form>
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" aria-describedby="emailHelp" name="email" placeholder="Enter email">
-      <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" name="password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-success">Submit</button>
-</form>
+<div class="container">
+    <form>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" aria-describedby="emailHelp" name="email" placeholder="Enter email">
+          <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+</div>
