--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,8 +18,16 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav justify-content-start">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Stats</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Forum</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav justify-content-end">
             <% if(!currentUser){ %>
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Sign Up</a>
