--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,19 @@
-<form>
-    <div class="form-group">
-      <label>Email address</label>
-      <input type="email" class="form-control" name="email" placeholder="Enter email">
-      <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="email" class="form-control" name="username" placeholder="Enter username">
-        <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" name="password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-success">Submit</button>
-</form>
+<div class="container">
+    <form>
+        <div class="form-group">
+          <label>Email address</label>
+          <input type="email" class="form-control" name="email" placeholder="Enter email">
+          <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="email" class="form-control" name="username" placeholder="Enter username">
+            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+</div>
