--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,5 @@
+<$ include ./partials/authHeader %>
+
 <div class="container">
     <form>
         <div class="form-group">
@@ -15,5 +17,8 @@
           <input type="password" class="form-control" name="password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-success">Submit</button>
+        <small class="form-text text-muted">Already a member? <a href="./register.ejs">Log in</a></small>
     </form>
 </div>
+
+<$ include ./partials/footer %>
