--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,10 @@
     background: #212121 url("https://images.unsplash.com/photo-1478317370563-0a8fc17e6837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60") no-repeat center center;
 }
 
+body {
+    background-color: #212121;
+}
+
 #show-card{
     margin-bottom: 10%;
 }
