--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <h1 class="mx-auto">Edit Comment</h1>
+        <h1 class="mx-auto">Edit Comment </h1>
     </div>
     <div class="row">
         <form action="/posts/<%=post_id%>/comments/<%=comment._id%>?_method=PUT" method="POST" class="mx-auto my-5">
@@ -11,7 +11,7 @@
             </div>
             <button class="btn btn-primary">Submit</button>
         </form>
-    </divf>
+    </div>
     <div class="row">
         <a href="/posts">Go Back</a>
     </div>
