--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PlayerApp</title>
+        <link href="https://fonts.googleapis.com/css?family=Gugi|Roboto:400,500,700,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
+        <title>CourtVision</title>
     </head>
     <body>
     
@@ -22,7 +23,7 @@
     </div>
     
     <div id="landing-header">
- 		<h1>Welcome to PlayerApp!</h1>
+ 		<h1>Welcome to CourtVision!</h1>
 		<a href="/posts" class="btn btn-lg btn-success">Get Started</a>
     </div>
     
