--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,23 @@
-<% include ./partials/authHeader %>
-
-<div class="container">
-    <form>
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control" aria-describedby="emailHelp" name="email" placeholder="Enter email">
-          <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+<% include ./partials/header %>
+<div class="auth-background">
+    <div class="auth-container">
+        <div class="card bg-dark">
+            <div class="card-body">
+                <h3 class="card-title text-success">Log In to CourtVision</h3>
+                <form action="/login" method="POST" autocomplete="off">
+                    <div class="form-group">
+                      <label for="text">Username</label>
+                      <input type="text" class="form-control" aria-describedby="usernameHelp" name="username" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                      <label for="password">Password</label>
+                      <input type="password" class="form-control" name="password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-success">Log In</button>
+                    <small class="form-text text-muted float-right">New to CourtVision? <a href="/register">Sign up</a></small>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-        <small class="form-text text-muted">New to CourtVision? <a href="#">Sign up</a></small>
-    </form>
+      </div>
 </div>
-
 <% include ./partials/footer %>
