--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,24 +1,23 @@
-<$ include ./partials/authHeader %>
-
-<div class="container">
-    <form>
-        <!-- <div class="form-group">
-          <label>Email address</label>
-          <input type="email" class="form-control" name="email" placeholder="Enter email">
-          <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div> -->
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="email" class="form-control" name="username" placeholder="Enter username">
-            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+<% include ./partials/header %>
+<div class="auth-background">
+    <div class="auth-container">
+        <div class="card bg-dark">
+            <div class="card-body">
+                <h3 class="card-title text-success">Register for CourtVision</h3>
+                <form action="/register" method="POST" autocomplete="off">
+                    <div class="form-group">
+                        <label for="text">Username</label>
+                        <input type="text" class="form-control" name="username" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" name="password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-success">Sign Up</button>
+                    <small class="form-text text-muted float-right">Already a member? <a href="/login">Log in</a></small>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-        <small class="form-text text-muted">Already a member? <a href="#">Log in</a></small>
-    </form>
+    </div>
 </div>
-
-<$ include ./partials/footer %>
+<% include ./partials/footer %>
