--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -2,21 +2,28 @@
 
 <div class="container">
     <div class="row">
-        <h1 class="mx-auto">Edit <em><%= post.name %></em> </h1>
-    </div>
-    <div class="row">
-        <form action="/posts/<%= post._id %>/?_method=PUT" method="POST" class="mx-auto my-5">
-            <div class="form-group">
-                <input class="form-control" type="text" name="post[name]" placeholder="name" value="<%= post.name %>">
+        <div class="col-sm-1">
+            <a class="back btn btn-info" href="/posts"><i class="fas fa-arrow-left"></i></a>
+        </div>
+
+        <div class="col-sm-8">
+            <div class="card bg-dark">
+                <h4 class="card-title"><em>Edit</em> - <%= post.name %></h4>
+                <form action="/posts/<%= post._id %>/?_method=PUT" method="POST" autocomplete="off">
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="post[name]" placeholder="Title" value="<%= post.name %>">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="post[description]" cols="40" rows="7" placeholder="What are your thoughts?" value="<%= post.description %>"></textarea>
+                    </div>
+                    <button class="btn btn-primary">Submit</button>
+                </form>
             </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="post[description]" placeholder="description" value="<%= post.description %>">
-            </div>
-            <button class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <div class="row">
-        <a href="/posts">Go Back</a>
+        </div>
+
+        <div class="col-sm-3">
+            <% include ../partials/rulesSideBar %>
+        </div>
     </div>
 </div>
 
