--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,23 +1,30 @@
-<% include ../partials/header.ejs %>
+<% include ../partials/header %>
 
 <div class="container">
     <div class="row">
-        <h1 class="mx-auto">Create a New Post</h1>
-    </div>
-    <div class="row">
-        <form action="/posts" method="POST" class="mx-auto my-5">
-            <div class="form-group">
-                <input class="form-control" type="text" name="title" placeholder="title">
+        <div class="col-sm-1">
+            <a class="back btn btn-info" href="/posts"><i class="fas fa-arrow-left"></i></a>
+        </div>
+
+        <div class="col-sm-8">
+            <div class="card bg-dark">
+                <h4>Create a Post</h4>
+                <form action="/posts" method="POST" autocomplete="off">
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="post[title]" placeholder="Title">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="post[description]" cols="40" rows="7" placeholder="What are your thoughts?"></textarea>
+                    </div>
+                    <button class="btn btn-primary">Submit</button>
+                </form>
             </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="description" placeholder="description">
-            </div>
-            <button class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <div class="row">
-        <a href="/posts">Go Back</a>
+        </div>
+
+        <div class="col-sm-3">
+            <% include ../partials/rulesSideBar %>
+        </div>
     </div>
 </div>
 
-<% include ../partials/footer.ejs %>
+<% include ../partials/footer %>
