--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -11,7 +11,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
-                            <h4 class="card-title"><%= post.name %></h4>
+                            <h4 class="card-title"><%= post.title %></h4>
                         </div>
                     </div>
                     <div class="card-text text-muted">
