--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,18 +1,9 @@
 <% include ../partials/header %>
 
-<div class="index-about-container">
-    <header id="jumbotron" class="jumbotron bg-success">
-        <div class="container">
-            <h1>Welcome To CourtVision!</h1>
-            <p>View the hottest trending topics in the NBA!</p>
-        </div>
-    </header>
-</div>
-
 <div class="container">
-    <% posts.slice().reverse().forEach((post) => { %>
-        <div class="row">
-            <div class="col-sm-12">
+    <div class="row">
+        <% posts.slice().reverse().forEach((post) => { %>
+            <div class="col-sm-8">
                 <div class="clickable-posts card bg-dark" data-clickable="true" data-href="/posts/<%= post._id %>">
                     <div class="card-body">
 
@@ -26,7 +17,7 @@
                                 </div>
                             </div>
                         </h6>
-                        <small class="post-author text-success">Posted by <i class="fas fa-user-circle"></i> <%= post.author.username %></small>
+                        <small class="post-author text-info">Posted by <i class="fas fa-user-circle"></i> <%= post.author.username %></small>
                         <p class="card-text"><%= post.description.substring(0,100) %>...</p>
 
 
@@ -35,7 +26,7 @@
                                 <form action="/posts/<%= post._id %>/like" method="POST">
                                     <div class="btn-group d-flex" role="group">
                                         <% if (currentUser && post.likes.some((like) => { %>
-                                            <% return like.equals(currentUser._id) %>
+                                           <% return like.equals(currentUser._id) %>
                                         <% })) { %>
                                             <button class="post-button btn btn-sm btn-primary">
                                                 <i class="fas fa-thumbs-up"></i> <%= post.likes.length %> Likes 
@@ -57,8 +48,18 @@
                 </div>
 
             </div>
+            <% }); %>
+
+            <div class="col-sm-4">
+                <img id="pic" class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRv0oe_vX8IxkHa-jc-d83TtIBju9HF5y7kwkUPZMBSTKY_jHAHVw" alt="NBA Logo">
+                <div id="welcome" class="card bg-dark">
+                    <h5 class="card-title">Home</h5>
+                    <p class="card-text">This is the frontpage! Come here to check out the hottest trending topics in the league.</p>
+                    <a class="btn btn-light" href="/campgrounds/new">Create Post</a>
+                </div>
+                <% include ../partials/rulesSideBar %>
+            </div>
         </div>
-    <% }); %>        
 </div>
 
 <% include ../partials/footer %>
