--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -11,10 +11,10 @@
                 <h4>Create a Post</h4>
                 <form action="/posts" method="POST" autocomplete="off">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="post[title]" placeholder="Title">
+                        <input class="form-control bg-dark text-light" type="text" name="post[title]" placeholder="Title">
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" name="post[description]" cols="40" rows="7" placeholder="What are your thoughts?"></textarea>
+                        <textarea class="form-control bg-dark text-light" name="post[description]" cols="40" rows="7" placeholder="What are your thoughts?"></textarea>
                     </div>
                     <button class="btn btn-primary">Submit</button>
                 </form>
