--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Gugi|Roboto:400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gugi|Rajdhani|Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ad7ce26b72.js"></script>
     <link rel="stylesheet" href="/stylesheets/main.css">
     <title>CourtVision</title>
