--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,45 +1,11 @@
 body {
-    background-color: black;
+    background-color: #1A1A1B;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
 
-#logo{
-    font-family: 'Gugi', cursive;
-    letter-spacing: 1px;
-    font-size: 33px;
-    color: #5cb85c;
-    /*#28a745*/
-    /*#b8b8b8*/
-    /*#5cb85c*/
-}
-
-.auth-background{
-    background: #212121 url("https://wallpaperbasketball.com/wp-content/uploads/2018/05/NBA-Wallpaper-For-Mac-Backgrounds.jpg") no-repeat center center;
-    background-size: cover;
-    height:100vh;
-    font-family: 'Roboto', sans-serif;
-    color:white;
-}
-
-.auth-container{
-    margin:auto;
-    width:41%;
-    padding: 5%;
-}
-
-.auth-container h3{
-    text-align:center;
-    margin-bottom:12px;
-}
-
-.auth-container button{
-    width:100%;
-}
-
 .navbar{
     padding:0 1% 0 1%;
-    background-color: #141415;
 }
 
 .navbar-nav .nav-link{
@@ -48,19 +14,45 @@ body {
     color:white !important;
 }
 
+#logo{
+    font-family: 'Gugi', cursive;
+    letter-spacing: 1px;
+    font-size: 33px;
+    color: #28a745;
+    /*#28a745*/
+    /*#b8b8b8*/
+    /*#5cb85c*/
+    /*#FA8320*/
+}
+
 .alert{
     padding: 1% 2%;
     margin:0;
 }
 
-.index-about-container{
-    margin-bottom: 2%;
+
+.auth-background{
+    background: black url("https://wallpaperbasketball.com/wp-content/uploads/2018/05/NBA-Wallpaper-For-Mac-Backgrounds.jpg") no-repeat center center;
+    background-size: cover;
+    height:100vh;
+    font-family: 'Roboto', sans-serif;
+    color:white;
 }
 
-.index-about-container .jumbotron{
+.auth-background .container{
+    margin:auto;
+    width:41%;
+    padding: 5%;
+}
+
+.auth-background h3{
     text-align:center;
-    opacity: 0.9;
-    background-color:orange;
+    margin-bottom:12px;
+    color:#28a745;
+}
+
+.auth-background button{
+    width:100%;
 }
 
 .container{
@@ -75,6 +67,7 @@ body {
 .clickable-posts[data-clickable=true]:hover{
     border:1px solid white;
 }
+
 
 .card{
     margin-bottom:1rem;
@@ -101,10 +94,14 @@ body {
 
 .post-button{
     margin-right:5px;
-    margin-bottom:20px;
+    margin-bottom:0px;
 }
 
-.add-comment{
+.page-break{
+    background-color: #6c757d;
+}
+
+#add-comment-form{
     width:100%;
 }
 
@@ -112,14 +109,55 @@ body {
     margin-top: 10px;
 }
 
-#rules{
-    padding:10px;
+.home-pic{
+    padding:0;
 }
 
-#rules > .lead{
-    text-align: center;
+#welcome{
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.list-group-flush{
+    margin-top:10px;
 }
 
 .list-group-item {
     display: list-item;
+}
+
+.dashboard-container{
+    font-family:"Rajdhani", sans-serif;
+    letter-spacing: 1px;
+    margin-bottom:8%;
+}
+
+.dashboard-jumbotron{
+    text-align: center;
+    border-radius: 0;
+}
+
+.dashboard-jumbotron input{
+    margin:auto;
+    width:25rem;
+}
+
+.stats-header{
+    text-align:center;
+    font-weight: 100;
+    margin-top: 45px;
+    font-family: "Rajdhani", sans-serif;
+}
+
+.stats-table{
+    font-size:0.8rem;
+    border:1px solid gray;
+    border-radius: .25rem;
+    margin-bottom: 35px auto;
+}
+
+.stats-table>thead>tr>th,
+.stats-table>tbody>tr>td {
+    border-top: none;
+    border-bottom:none;
 }
