--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,23 @@
 <% include ./partials/header %>
 <div class="auth-background">
-    <div class="auth-container">
+    <div class="container">
         <div class="card bg-dark">
             <div class="card-body">
-                <h3 class="card-title text-success">Log In to CourtVision</h3>
+                <h3 class="card-title">Log In to CourtVision</h3>
                 <form action="/login" method="POST" autocomplete="off">
                     <div class="form-group">
                       <label for="text">Username</label>
-                      <input type="text" class="form-control" aria-describedby="usernameHelp" name="username" placeholder="Username">
+                      <input type="text" class="form-control bg-dark text-light" aria-describedby="usernameHelp" name="username" placeholder="Username">
                     </div>
                     <div class="form-group">
                       <label for="password">Password</label>
-                      <input type="password" class="form-control" name="password" placeholder="Password">
+                      <input type="password" class="form-control bg-dark text-light" name="password" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-success">Log In</button>
+                    <button type="submit" class="btn btn-primary">Log In</button>
                     <small class="form-text text-muted float-right">New to CourtVision? <a href="/register">Sign up</a></small>
                 </form>
             </div>
         </div>
-      </div>
+    </div>
 </div>
 <% include ./partials/footer %>
