--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,18 +2,25 @@
 
 <div class="container">
     <div class="row">
-        <h1 class="mx-auto">Add New Comment to <%=post.name%></h1>
-    </div>
-    <div class="row">
-        <form action="/posts/<%=post._id%>/comments" method="POST" class="mx-auto my-5">
-            <div class="form-group">
-                <input class="form-control" type="text" name="comment[text]" placeholder="text">
+        <div class="col-sm-1">
+            <a class="back btn btn-info" href="/posts"><i class="fas fa-arrow-left"></i></a>
+        </div>
+
+        <div class="col-sm-8">
+            <div class="card bg-dark">
+                <h4>New Comment - "<%= post.title %>"</h4>
+                <form action="/posts/<%=post._id%>/comments" method="POST" autocomplete="off">
+                    <div class="form-group">
+                        <textarea class="form-control bg-dark text-light" name="comment[text]" cols="40" rows="7" placeholder="What are your thoughts?"></textarea>
+                    </div>
+                    <button class="btn btn-primary">Submit</button>
+                </form>
             </div>
-            <button class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <div class="row">
-        <a href="/posts">Go Back</a>
+        </div>
+
+        <div class="col-sm-3">
+            <% include ../partials/rulesSideBar %>
+        </div>
     </div>
 </div>
 
